--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="no_subscription">현재 보유하신 이용권이 없습니다.</string>
     <string name="buy_subscription">구매하기 ></string>
     <string name="user_name_format">%s 님</string>
+    <string name="user_hobby_format">취미: %s</string>
 </resources>
